kubernetes/java-app/JavaAppDeploymentConfig.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: java-app-usuario
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: java-app-usuario
  template:
    metadata:
      labels:
        app: java-app-usuario
    spec:
      containers:
        - name: java-app-usuario
          image: alecigolini/fiap-techchallengeapicliente:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "400m"
              memory: "512Mi"
            limits:
              cpu: "500m"
              memory: "1024Mi"
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: java-app-usuario
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  selector:
    app: java-app-usuario
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: java-app-usuario-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /usuarios(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: java-app-usuario
                port:
                  number: 80
